Added additional vm arguments to tests