@@ -11,6 +11,11 @@
         <java.version>14</java.version>
         <junit.jupiter.version>5.6.1</junit.jupiter.version>
         <slf4j.version>1.7.30</slf4j.version>
+        <vm.args>
+            --enable-preview
+            --add-opens java.base/java.lang=novel
+            --add-opens java.base/java.util=novel
+        </vm.args>
     </properties>
     <dependencies>
         <dependency>
@@ -51,7 +56,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M4</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+                    <argLine>${vm.args}</argLine>
                 </configuration>
             </plugin>
         </plugins>
